# BaldursGateC-

./: .gitignore  CMakeLists.txt  README.md  main.cpp  makefile
classes/: character.cpp  character.hpp  dungeon.cpp  dungeon.hpp  enemy.cpp  enemy.hpp  game.cpp  game.hpp  item.cpp  item.hpp  json_conversion.cpp  json_conversion.hpp  location.cpp  location.hpp  player.cpp  player.hpp
data/: constants.hpp  default.json  dungeons.json  enemies.json  help.txt  map.json  save.json  welcome.txt
helper/: error.cpp  error.hpp  functions.cpp  functions.hpp  screen.cpp  screen.hpp
logs/: main_log.txt
